@@ -19,7 +19,11 @@ Download the JavaFX SDK v23.0.1 [from here](https://gluonhq.com/products/javafx/
 Add a run configuration with the following as VM options
 
 ```
--Ddirectory.config=.rpmjukeboxdev -Dconsole.log.only=true --module-path <path-to-sdk>/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml,javafx.media
+-Ddirectory.config=.rpmjukeboxdev 
+-Dconsole.log.only=true 
+--module-path <path-to-sdk>/javafx-sdk-22.0.1/lib 
+--add-modules=javafx.controls,javafx.fxml,javafx.media 
+--enable-native-access=ALL-UNNAMED
 ```
 
 ## Building a release
@@ -39,7 +43,7 @@ Run the following Maven command.
 ### v6.0.1
 
 * Upgraded to JavaFX 23.0.1
-* Refactored how caching works
+* Disabled caching as JavaFX 23 won't play files that don't have a file suffix :-(
 
 ### v6.0.0
 
